--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
@@ -12,9 +13,11 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+psycopg2-binary==2.9.10
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
@@ -25,6 +28,7 @@ rich==14.0.0
 rich-toolkit==0.14.6
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.46.2
 typer==0.15.4
 typing-inspection==0.4.0
